--- a/bwcj-back/src/main/resources/application.yml
+++ b/bwcj-back/src/main/resources/application.yml
@@ -3,6 +3,10 @@ server:
 spring:
   application:
     name: bwcj
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
 logging:
   level:
     com.zfy.bwcj: debug
