add: Proxy - protectProxy

--- a/bwcj-back/pom.xml
+++ b/bwcj-back/pom.xml
@@ -72,6 +72,18 @@
             <version>${poi.version}</version>
         </dependency>
 
+        <!-- Spring AOP -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <!-- Spring JDBC (包含事务支持) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
